@@ -1,13 +1,17 @@
 <?php
-	$title = "Layout and Rendering";
-	include("../../header.inc");
+    $title = "Layout and Rendering";
+    include("../../header.inc");
 ?>
 <h2>Layout and Rendering</h2>
+<p>Layout and rendering provides the core functionality to display a markup language such as HTML, SVG, or MathML.  A render object tree is generated from the markup and those tree object instances are responsible for the layout and subsequent rendering of the content.</p>
 
-<p>
-Needs to be written.
-</p>
+<h3>Related Blog Entries</h3>
+<p> <a href="http://webkit.org/blog/114/webcore-rendering-i-the-basics/">WebCore Rendering I – The Basics</a> </p>
+<p> <a href="http://webkit.org/blog/115/webcore-rendering-ii-blocks-and-inlines/">WebCore Rendering II – Blocks and Inlines</a> </p>
+<p> <a href="http://webkit.org/blog/116/webcore-rendering-iii-layout-basics/">WebCore Rendering III – Layout Basics</a> </p>
+<p> <a href="http://webkit.org/blog/117/webcore-rendering-iv-absolutefixed-and-relative-positioning/">WebCore Rendering IV – Absolute/Fixed and Relative Positioning</a> </p>
+<p> <a href="http://webkit.org/blog/118/webcore-rendering-v-floats/">WebCore Rendering V – Floats</a> </p>
 
 <?php
-	include("../../footer.inc");
+    include("../../footer.inc");
 ?>
